# mmdb-server

./: .gitignore  Dockerfile  README.md  REQUIREMENTS  pyproject.toml
db/: country.json  update.sh
etc/: server.conf.sample
mmdb_server/: mmdb_server.py
tools/: read-csv.py
